--- a/com.packtpub.e4.clock.ui/plugin.xml
+++ b/com.packtpub.e4.clock.ui/plugin.xml
@@ -112,6 +112,10 @@
  </extension>   
  	<extension point="org.eclipse.ui.commands">
  		<command name="Show the time" description="Shows the time" id="com.packtpub.e4.clock.ui.command.showTheTime"/>
+ 	</extension>
+ 	
+ 	<extension point="org.eclipse.ui.preferencePages">
+ 		<page name="Clock" class="com.packtpub.e4.clock.ui.views.ClockPreferencePage" id="com.packtpub.e4.clock.ui.preference.page"/>
  	</extension> 
 
 </plugin>
