--- a/com.packtpub.e4.minimark.ui/plugin.xml
+++ b/com.packtpub.e4.minimark.ui/plugin.xml
@@ -2,7 +2,7 @@
 <?eclipse version="3.4"?>
 <plugin>
 
-   <extension
+   <!--extension
          point="org.eclipse.ui.editors">
       <editor
             name="Minimark"
@@ -12,6 +12,14 @@
             class="com.packtpub.e4.minimark.ui.MinimarkEditor"
             id="com.packtpub.e4.minimark.ui.minimarkeditor">
       </editor>
+   </extension-->
+   <extension id="MinimarkBuilder" point="org.eclipse.core.resources.builders">
+      <builder
+            callOnEmptyDelta="false"
+            hasNature="false"
+            isConfigurable="false"
+            supportsConfigurations="false">
+            <run class="com.packtpub.e4.minimark.ui.MinimarkBuilder"/>
+      </builder>
    </extension>
-
 </plugin>
