--- a/com.packtpub.e4.minimark.ui/plugin.xml
+++ b/com.packtpub.e4.minimark.ui/plugin.xml
@@ -1,18 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-
-   <!--extension
-         point="org.eclipse.ui.editors">
-      <editor
-            name="Minimark"
-            extensions="minimark"
-            icon="icons/sample.gif"
-            contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
-            class="com.packtpub.e4.minimark.ui.MinimarkEditor"
-            id="com.packtpub.e4.minimark.ui.minimarkeditor">
-      </editor>
-   </extension-->
    <extension id="MinimarkBuilder" point="org.eclipse.core.resources.builders">
       <builder
             callOnEmptyDelta="false"
@@ -22,4 +10,23 @@
             <run class="com.packtpub.e4.minimark.ui.MinimarkBuilder"/>
       </builder>
    </extension>
+
+	<!-- Define extension point for nature -->
+   <extension id="MinimarkNature" point="org.eclipse.core.resources.natures">
+   		<runtime>
+   			<run class="com.packtpub.e4.minimark.ui.MinimarkNature"/>
+   		</runtime>
+   	</extension>
+   	
+   	<!-- Added to add menu to associate nature with project -->
+   	<extension point="org.eclipse.ui.commands">
+   		<command name="Add Minimark Nature" defaultHandler="com.packtpub.e4.minimark.ui.AddMinimarkHandler"
+   			id="com.packtpub.e4.minimark.ui.AddMinimarkNature"/>
+   	</extension>
+   	<extension point="org.eclipse.ui.menus">
+   		<menuContribution allPopups="false" locationURI="popup:org.eclipse.ui.projectConfigure?after=additions">
+   			<command label="Add Minimark Nature" style="push"
+   				commandId="com.packtpub.e4.minimark.ui.AddMinimarkNature"/>
+		</menuContribution>
+	</extension>
 </plugin>
