--- a/com.packtpub.e4.application/build.properties
+++ b/com.packtpub.e4.application/build.properties
@@ -1,8 +1,9 @@
 output.. = bin/
-bin.includes = META-INF/,\
+bin.includes = OSGI-INF/, \
+				META-INF/,\
                .,\
                plugin.xml,\
                Application.e4xmi,\
                icons/,\
-               css/default.css
+               css/default.css, \               
 source.. = src/
