--- a/com.packtpub.e4.parent/pom.xml
+++ b/com.packtpub.e4.parent/pom.xml
@@ -15,6 +15,7 @@
 		<module>com.packtpub.e4.clock.ui</module>
 		<module>com.packtpub.e4.feature</module>
 		<module>com.packtpub.e4.update</module>
+		<module>com.packtpub.e4.application</module>
 	</modules>
 	<build>
 		<plugins>
