--- a/SpringMDB/pom.xml
+++ b/SpringMDB/pom.xml
@@ -3,59 +3,16 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sample</groupId>
     <artifactId>spring.mdb</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>spring.mdb Maven Webapp</name>
+    <modules>
+        <module>spring.jms.common</module>
+        <module>spring.jms.sender</module>
+        <module>spring.jms.receiver</module>
+    </modules>
+    <name>spring.mdb</name>
     <url>http://maven.apache.org</url>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jms</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jms</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.jms</groupId>
-            <artifactId>javax.jms-api</artifactId>
-            <version>2.0</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
-    <build>
-        <finalName>${build.warname}</finalName>
-        <plugins>
-            <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.1.1</version>
-                <configuration>
-                    <warName>${build.warname}</warName>
-                    <outputDirectory>${output.dir}</outputDirectory>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     <properties>
         <spring.version>3.2.5.RELEASE</spring.version>
-        <output.dir>/opt/app/wls1036_dev/user_projects/domains/des_single_domain/autodeploy</output.dir>
-        <build.warname>spring-mdp</build.warname>
     </properties>
 </project>
