--- a/SpringMDB/spring.jms.receiver/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMDB/spring.jms.receiver/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,11 @@
   <display-name>Archetype Created Web Application</display-name>
     <servlet>
         <servlet-name>dispatcher</servlet-name>
-        <servlet-class> org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:receiver-applicationContext.xml</param-value>
+        </init-param>
         <load-on-startup>2</load-on-startup>
     </servlet>
 
