--- a/TimeBoxer/pom.xml
+++ b/TimeBoxer/pom.xml
@@ -33,12 +33,22 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.sample.ui.TimeCounterDialog</mainClass>               
-                        </manifest>           
+                            <mainClass>com.sample.ui.TimeCounterDialog</mainClass>
+                        </manifest>
                     </archive>
                 </configuration>
             </plugin>
-        </plugins>	
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+        </plugins>
     </build>
 
 </project>
